@@ -1,309 +1,0 @@
-Functional Test Plan
-====================
-
-Test File:
-small.wmv: 4 i-frames, 10 seconds, backward seekable
-middle.avi: 40 minutes video clip
-broken.avi: a broken video clip
-jumppy.avi: composed by 3 clips each has minutes offset (cat broken.avi xag xap > jumppy.avi)
-bumppy.avi: content the rewound time stamp (cat broken.avi xar xaf > bummpy.avi)
-DejaVuSans.ttf: TTF font file
-background.jpg: an image for the background setting test, which is smaller than the canvas
-bigground.png: an image for the background setting test, which is bigger than the canvas
-
-
-#001 Generate 4x4 thumbnails, 50% screen size
--    More explain lines should start with a '-'
-ezthumb small.wmv
-
-#002 Generate 4x4 thumbnails, 50% screen size and accurate frames
-ezthumb --accurate small.wmv
-
-#003 Display media quick list
-ezthumb -i *
-
-#004 Display detailed media information
-ezthumb -I small.wmv
-
-#005 Do a full scan and display the media information
-ezthumb -I -d scan small.wmv
-
-#006 Do a quick scan and display the media information
-ezthumb -I -d fast small.wmv
-
-#007 Specify the canvas colour: Media information is BLUE, Timestamp is RED,
--    The background is grey
-ezthumb -c 0000ff:ff0000:7f7f7f small.wmv
-
-#008 Only setup the background colour:
-ezthumb -c ::7f7f7f small.wmv
-
-#009 Check the result of '-d' option: see the different of below
-ezthumb -i broken.avi
-ezthumb -i -d fast broken.avi
-
-#010 Set up the thumbnail edge
-ezthumb -e 4 small.wmv
-
-#011 Specify an output directory
-ezthumb -o ~ small.wmv middle.avi
-ezthumb -o /tmp small.wmv middle.avi
-
-#012 Specify the suffix of the output files
-ezthumb -x _pic small.wmv middle.avi
-ezthumb -x 123  small.wmv middle.avi
-
-#013 Specify the video stream index explicitly
-ezthumb --vindex 3  small.wmv  (should be failed)
-
-
-#021 Test the internal font with different size:
-ezthumb -F 16:8 small.wmv
-
-#022 Test the internal font with different size and colour:
-ezthumb -F 16:8 -c 00ff00:0000ff small.wmv
-
-#023 Test the external font with DejaVuSans.ttf:
-ezthumb -f ./DejaVuSans.ttf small.wmv
-
-#024 Use the external font DejaVuSans.ttf and change its size
-ezthumb -f ./DejaVuSans.ttf -F 16:8 small.wmv
-
-#025 Use the same font but only change the size and colour of the time stamp:
-ezthumb -f ./DejaVuSans.ttf -F :16 -c :ff0000: small.wmv
-
-
-#030 Set up an 8x1 grid
-ezthumb -g 8x1 small.wmv
-
-#031 Set up a 1x8 grid
-ezthumb -g 1x8 small.wmv
-
-#032 No grid and canvas at all, save to separate 8 screen shots:
-ezthumb -g 0x8 small.wmv
-
-#033 No grid and canvas, save all i-frame separately:
-ezthumb -g 0x0 small.wmv
-
-#034 Take snapshots and change to expected size in percentage:
-ezthumb -g 3x5 -s 40% small.wmv
-ezthumb -g 3x5 -s 20% small.wmv
-
-#035 Take snapshots and change to expected size in pixel:
-ezthumb -g 3x5 -s 300x100 small.wmv
-
-#036 Limit the width of the canvas and automatically fit the snapshots
-ezthumb -g 3x5 -s 300x100 -w 1024 small.wmv
-
-#037 Set up the gaps between screen shots in pixel:
-ezthumb -g 3x5 --gap-shots 0 small.wmv
-ezthumb -g 3x5 --gap-shots 10 small.wmv
-
-#038 Set up the gaps between screen shots in proportion:
-ezthumb -g 3x5 --gap-shots 0% small.wmv
-ezthumb -g 3x5 --gap-shots 10% small.wmv
-
-#039 Set up the canvas margin in pixel:
-ezthumb -g 3x5 --gap-margin 0 small.wmv
-ezthumb -g 3x5 --gap-margin 20 small.wmv
-
-#040 Set up the canvas margin in proportion:
-ezthumb -g 3x5 --gap-margin 0% small.wmv
-ezthumb -g 3x5 --gap-margin 20% small.wmv
-
-#041 Turn off the media information
-ezthumb --opt-info off small.wmv
-
-#042 Place the media information to the right corner
-ezthumb --pos-info rt small.wmv
-ezthumb --pos-info rc small.wmv
-ezthumb --pos-info rb small.wmv
-
-#043 Place the media information to the center
-ezthumb --pos-info mt small.wmv
-ezthumb --pos-info mc small.wmv
-ezthumb --pos-info mb small.wmv
-
-#044 Turn off the timestamp
-ezthumb --opt-time off small.wmv
-
-#045 Place the timestamp to the left-top, left-bottom and right-bottom corner:
-ezthumb --pos-time lt small.wmv
-ezthumb --pos-time lb small.wmv
-ezthumb --pos-time rb small.wmv
-
-#046 Place the timestamp to the unusual place:
-ezthumb --pos-time lc small.wmv
-ezthumb --pos-time mt small.wmv
-ezthumb --pos-time mc small.wmv
-ezthumb --pos-time mb small.wmv
-ezthumb --pos-time rc small.wmv
-
-#047 Make sure the 'tt' place does NOT work for media information and timestamp
-ezthumb --pos-info tt small.wmv
-ezthumb --pos-time tt small.wmv
-
-
-#060 Generate JPG outputs with the different qualities. 
--    The quality over 100 should be ignored.
-ezthumb -m jpg@20 small.wmv
-ezthumb -m jpg@100 small.wmv
-ezthumb -m jpg@120 small.wmv
-
-#061 Generate PNG outputs. The tailing '@20' should be ignored.
-ezthumb -m png small.wmv
-ezthumb -m png@20 small.wmv
-
-#062 Generate GIF outputs. 
-ezthumb -m gif small.wmv
-
-#063 Generate the animation GIF outputs. The time interval is 500 milliseconds:
-ezthumb -m gif@500 small.wmv
-
-#064 Generate the animation GIF outputs without timestamps:
-ezthumb -m gif@300 --opt-time off small.wmv
-
-#065 Generate the animation GIF outputs by key-frames:
-ezthumb -m gif@1000 -g 0 small.wmv
-
-#066 Generate GIF output and transparent background
-ezthumb -m gif --transparent small.wmv
-
-#067 Generate GIF output and transparent background with specified colour
--    Nothing should be happened
-ezthumb -m gif -c ::ff0000 --transparent small.wmv
-
-#068 Generate PNG output and transparent background
-ezthumb -m png --transparent small.wmv
-
-#069 Generate PNG output and transparent background with specified colour
--    Nothing should be happened
-ezthumb -m png -c ::ff0000 --transparent small.wmv
-
-#070 Specify a background picture
-ezthumb -c ::7f7f7f --background background.jpg --gap-shots 20 --gap-margin 40 small.wmv
-
-#071 Place the background picture to all places (lt,lc,lb,mt,mc,mb,rt,rc,rb)
-ezthumb -c ::7f7f7f --background background.jpg --gap-shots 20 --gap-margin 40 --pos-bg lt small.wmv
-ezthumb -c ::7f7f7f --background background.jpg --gap-shots 20 --gap-margin 40 --pos-bg mt small.wmv
-...
-
-#072 Tilt the background picture
-ezthumb -c ::7f7f7f --background background.jpg --gap-shots 20 --gap-margin 40 --pos-bg tt small.wmv
-
-#073 Enlarge or shrink the background picture to the whole canvas
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background background.jpg --pos-bg st small.wmv
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background bigground.png --pos-bg st small.wmv
-
-#074 Enlarge or shrink the background picture to the width of the canvas while keeping proportion
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background background.jpg --pos-bg ex small.wmv
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background bigground.png --pos-bg ex small.wmv
-
-#075 Same to #074, except to relocate the background picture to canvas center and bottom:
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background background.jpg --pos-bg mc:ex small.wmv
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background bigground.png --pos-bg rb:ex small.wmv
-
-#076 Enlarge or shrink the background picture to the height of the canvas while keeping proportion
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background background.jpg --pos-bg ey small.wmv
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background bigground.png --pos-bg ey small.wmv
-
-#077 Same to #076, except to relocate the background picture to canvas bottom and center:
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background background.jpg --pos-bg rb:ey small.wmv
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background bigground.png --pos-bg mc:ey small.wmv
-
-#078 Enlarge or shrink the background picture to the width of the canvas without keeping proportion
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background background.jpg --pos-bg sx small.wmv
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background bigground.png --pos-bg sx small.wmv
-
-#079 Same to #078, except to relocate the background picture to canvas center and bottom:
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background background.jpg --pos-bg mc:sx small.wmv
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background bigground.png --pos-bg rb:sx small.wmv
-
-#080 Enlarge or shrink the background picture to the height of the canvas without keeping proportion
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background background.jpg --pos-bg sy small.wmv
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background bigground.png --pos-bg sy small.wmv
-
-#081 Same to #080, except to relocate the background picture to canvas bottom and center:
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background background.jpg --pos-bg rb:sy small.wmv
-ezthumb -c ::7f7f7f --gap-shots 20 --gap-margin 40 --background bigground.png --pos-bg mc:sy small.wmv
-
-
-#090 Take screen shots by setting time steps
-ezthumb -t 1000  -g 3 -v 1 small.wmv
-ezthumb -t 60000 -g 5 -v 1 middle.avi
-
-#091 Take accurate screen shots by setting time steps
-ezthumb -t 1000 -g 3 -v 1 --accurate small.wmv
-
-#092 Take seperate screen shots by setting time steps
-ezthumb -t 1000  -g 0 -v 1 small.wmv
-
-#093 Take screen shots from the first frame
-ezthumb --opt-ffr on -v 1 middle.avi
-
-#094 Take screen shots which include the last frame
-ezthumb --opt-lfr on -v 1 middle.avi
-
-#095 Take screen shots from the specified time position
-ezthumb --time-from 30 -v 1 middle.avi
-ezthumb --time-from 5:30 -v 1 middle.avi
-ezthumb --time-from 0:5:30 -v 1 middle.avi
-ezthumb --time-from 15% -v 1 middle.avi
-
-#096 Take screen shots till the specified time position
-ezthumb --time-end 0:35:30 -v 1 middle.avi
-
-#097 Take screen shots from specified time position to the specified time position
-ezthumb --time-from 15% --time-end 0:35:30 -v 1 middle.avi
-
-#098 Take screen shots inside specified time positions with both end of frames
-ezthumb --time-from 15% --time-end 0:35:30 --opt-ffr on --opt-lfr on  -v 1 middle.avi
-
-#099 Take screen shots with reversed time positions (--time-end should be ignored)
-ezthumb --time-from 85% --time-end 15% -v 1 middle.avi
-
-
-
-
-
-#200 Generate thumbnails via Fast Skim process 
-ezthumb -p 1 -v 1 small.wmv
-ezthumb -p 1 -v 1 --accurate small.wmv
-ezthumb -p 1 -v 1 --accurate --decode-otf small.wmv
-
-#201 Generate thumbnails via Scan process
-ezthumb -p 2 -v 1 small.wmv
-ezthumb -p 2 -v 1 --accurate small.wmv
-ezthumb -p 2 -v 1 --accurate --decode-otf small.wmv
-
-#202 Generate thumbnails via Two-pass Scan process
-ezthumb -p 3 -v 1 small.wmv
-ezthumb -p 3 -v 1 --accurate small.wmv
-ezthumb -p 3 -v 1 --accurate --decode-otf small.wmv
-
-#203 Generate thumbnails via Heuristic process
-ezthumb -p 4 -v 1 small.wmv
-ezthumb -p 4 -v 1 --accurate small.wmv
-ezthumb -p 4 -v 1 --accurate --decode-otf small.wmv
-
-#204 Generate thumbnails via Fast Skim process for B-frame error file
-ezthumb -p 1 -v 1 middle.avi
-ezthumb -p 1 -v 1 --accurate middle.avi
-ezthumb -p 1 -v 1 --accurate --decode-otf middle.avi
-
-#205 Generate thumbnails via Scan process for B-frame error file
-ezthumb -p 2 -v 1 middle.avi
-ezthumb -p 2 -v 1 --accurate middle.avi
-ezthumb -p 2 -v 1 --accurate --decode-otf middle.avi
-
-#206 Generate thumbnails via Two-pass Scan process for B-frame error file
-ezthumb -p 3 -v 1 middle.avi
-ezthumb -p 3 -v 1 --accurate middle.avi
-ezthumb -p 3 -v 1 --accurate --decode-otf middle.avi
-
-#207 Generate thumbnails via Heuristic process for B-frame error file
-ezthumb -p 4 -v 1 middle.avi
-ezthumb -p 4 -v 1 --accurate middle.avi
-ezthumb -p 4 -v 1 --accurate --decode-otf middle.avi
-
-
