@@ -1,0 +1,63 @@
+
+ifndef	SYSTOOL		# Options: cygwin, unix, mingw, cygmingw
+ifeq	($(MSYSTEM),MINGW32)
+export	SYSTOOL = mingw
+else
+export	SYSTOOL	= unix
+endif
+endif
+
+ifndef	SYSAPI		# Options: CFG_WIN32_API, CFG_UNIX_API
+ifeq	($(MSYSTEM),MINGW32)
+export	SYSAPI	= CFG_WIN32_API
+else
+export	SYSAPI	= CFG_UNIX_API
+endif
+endif
+
+
+ifeq	($(SYSTOOL),cygmingw)
+CC	= i686-w64-mingw32-gcc
+AR	= i686-w64-mingw32-ar
+CP	= cp
+RM	= rm -f
+endif
+
+
+ifeq    ($(SYSTOOL),cygwin)
+CC	= gcc
+AR	= ar
+CP	= cp -f
+RM	= rm -f
+endif
+
+ifeq	($(SYSTOOL),mingw)
+CC	= gcc -mms-bitfields
+AR	= ar
+CP	= cp
+RM	= rm -f
+
+#WGLIB	= -lcomctl32 -lcomdlg32 -lgdi32 -Wl,--subsystem,windows
+#WGLIB	= -lcomctl32 -mconsole -mwindows
+WGLIB	= -lcomctl32 -mwindows
+SYSFLAG	= -DUNICODE -D_UNICODE -D_WIN32_IE=0x0500 -DWINVER=0x500
+endif
+
+ifeq	($(SYSTOOL),unix)
+CC	= gcc
+AR	= ar
+CP	= cp
+RM	= rm -f
+endif
+
+
+PREFIX	= /usr/local
+BINDIR	= /usr/local/bin
+MANDIR	= /usr/local/man/man1
+
+DEBUG	= -g -DDEBUG
+DEFINES = 
+CFLAGS	= -Wall -Wextra -O3 $(DEBUG) $(DEFINES) $(SYSFLAG) 
+
+
+
